--- a/index.html
+++ b/index.html
@@ -151,7 +151,57 @@
             <a class="playstore" href="">Playstore</a>
             <a class="googleplay" href=""> Google Play</a>
           </div>
-          <article></article>
+          <section class="flex-afro">
+            <div class="afro-img"></div>
+            <div class="afro-text">
+              <h2>My little garret repair to desire the esteem.</h2>
+              <p>
+                Just like we said before, we have tons of features that will
+                helps you to manage you wallet. From income, outcome, montly
+                usage, and etc.
+              </p>
+              <a class="green-btn" href="">Try for free</a>
+            </div>
+          </section>
+        </section>
+        <section class="start-today">
+          <h2 class="start-h">
+            Start today, with free or premium plan, you choose
+          </h2>
+          <p class="start-p">
+            With lots of unique and useful features, you can easily manage your
+            wallet easily without any problem.
+          </p>
+          <section class="start-boxes">
+            <div class="start-box-one">
+              <h2 class="basic-plan">BASIC PLAN</h2>
+              <h3 class="basic-drei">
+                $0 <span style="font-size: 1.6rem">Per month</span>
+              </h3>
+              <h4 class="basic-vier">
+                Joy horrible moreover man feelings own shy. Request norland
+                neither mistake for yet. Between the for morning assured.
+              </h4>
+              <p class="basic-p2">Customer Support</p>
+              <p class="basic-p3">Free User Account</p>
+              <p class="basic-p4">Monthly Reports</p>
+              <p class="basic-p5">Multiple Devices</p>
+              <a class="white-btn" href="">Join for free</a>
+            </div>
+            <div class="start-box-two">
+              <h2 class="premium-plan">PREMIUM PLAN</h2>
+              <h3 class="premium-drei">$49 Per month</h3>
+              <h4 class="premium-vier">
+                On even feet time have an no at. Relation so in confined
+                smallest children unpacked delicate. Why sir end believe.
+              </h4>
+              <p class="premium-p1">Customer Support</p>
+              <p class="premium-p2">Up to 10 Users</p>
+              <p class="premium-p3">Monthly Reports</p>
+              <p class="premium-p4">Multiple Devices Supported</p>
+              <a class="white-btn" href="">Join for free</a>
+            </div>
+          </section>
         </section>
       </main>
     </div>
