--- a/index.html
+++ b/index.html
@@ -182,28 +182,90 @@
                 Joy horrible moreover man feelings own shy. Request norland
                 neither mistake for yet. Between the for morning assured.
               </h4>
-              <p class="basic-p2">Customer Support</p>
-              <p class="basic-p3">Free User Account</p>
-              <p class="basic-p4">Monthly Reports</p>
-              <p class="basic-p5">Multiple Devices</p>
+              <p class="basic-p-one">Customer Support</p>
+              <p class="basic-p-two">Free User Account</p>
+              <p class="basic-p-three">Monthly Reports</p>
+              <p class="basic-p-four">Multiple Devices</p>
               <a class="white-btn" href="">Join for free</a>
             </div>
             <div class="start-box-two">
               <h2 class="premium-plan">PREMIUM PLAN</h2>
-              <h3 class="premium-drei">$49 Per month</h3>
+              <h3 class="premium-drei">
+                $49 <span style="font-size: 1.6rem">Per month</span>
+              </h3>
               <h4 class="premium-vier">
                 On even feet time have an no at. Relation so in confined
                 smallest children unpacked delicate. Why sir end believe.
               </h4>
-              <p class="premium-p1">Customer Support</p>
-              <p class="premium-p2">Up to 10 Users</p>
-              <p class="premium-p3">Monthly Reports</p>
-              <p class="premium-p4">Multiple Devices Supported</p>
+              <p class="premium-p-one">Customer Support</p>
+              <p class="premium-p-two">Up to 10 Users</p>
+              <p class="premium-p-three">Monthly Reports</p>
+              <p class="premium-p-four">Multiple Devices</p>
               <a class="white-btn" href="">Join for free</a>
             </div>
           </section>
         </section>
+        <section class="testimonials">
+          <h2>TESTIMONIALS</h2>
+          <h3>Check what our clients are saying</h3>
+          <section class="testimonials-flex">
+            <div class="testimonials-img"></div>
+            <div class="testimonials-text">
+              <img src="./assets/img/“.png" alt="" /> <br /><br />
+              <img src="./assets/img/Group 192.png" alt="" />
+              <p class="testimonials-info">
+                Is be upon sang fond must shew. Really boy law county she unable
+                her sister. Feet you off its like like six. Among sex are leave
+                law built now.
+              </p>
+              <p class="testimonials-name">Danial H</p>
+              <p class="testimonials-ceo">CEO GetNextDesign</p>
+            </div>
+          </section>
+        </section>
+        <section class="discover">
+          <h2>Discover a better way to manage purchases.</h2>
+          <a class="discover-btn" href=""
+            ><span style="color: white">Get Started Now</span></a
+          >
+        </section>
       </main>
+      <footer>
+        <section>
+          <div class="danial-h">
+            <h2>Danial H</h2>
+            <p>Finance helps companies manage payments easily.</p>
+            <div class="footer-img"></div>
+          </div>
+          <div>
+            <h2>Company</h2>
+            <p class="footer-cont">Proposal</p>
+            <p class="footer-cont">Careers</p>
+            <p class="footer-cont">Blog</p>
+            <p class="footer-cont">Pricing</p>
+          </div>
+          <div>
+            <h2>Product</h2>
+            <p class="footer-cont">Invoicing</p>
+            <p class="footer-cont">Contract</p>
+            <p class="footer-cont">Accounting</p>
+            <p class="footer-cont">Proposal</p>
+          </div>
+          <div>
+            <h2>Resources</h2>
+            <p class="footer-cont">Proposal Template</p>
+            <p class="footer-cont">Invoice Template</p>
+            <p class="footer-cont">Tuturoial</p>
+            <p class="footer-cont">How to write a contract</p>
+          </div>
+          <div>
+            <h2>Contact Us</h2>
+            <p class="footer-cont">danialads12@gmail.com</p>
+            <p class="footer-cont">+92-311-689-2135</p>
+          </div>
+        </section>
+        <h3>Copyright @ Danial Habib 2024. All Rights Reserved.</h3>
+      </footer>
     </div>
   </body>
 </html>
