--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="#">Pricing</a>
           </div>
           <div>
+            <img src="./assets/img/menu-burger.png" alt="" />
             <a href="#">Sign In</a>
             <a class="orange-btn" href="#">Start Free</a>
           </div>
